<resources>
    <string name="app_name">Linear Layout Task</string>
    <string name="ahmed_hassan">Ahmed Hassan</string>
    <string name="engineer">Engineer</string>
    <string name="uk">UK</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="person">person</string>
    <string name="_3_hr">3 hr</string>
    <string name="russian">Russian</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="_4_5">4.5</string>
    <string name="location">location</string>
    <string name="yellow_star">yellow star</string>
</resources>