<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">


        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_edges"
            android:contentDescription="@string/person"
            android:src="@drawable/person" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ahmed_hassan"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                style="@style/wrap_12sp"
                android:layout_marginBottom="8dp"
                android:text="@string/engineer"
                android:textColor="#DE122940"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/location"
                    android:src="@drawable/location" />


                <TextView
                    style="@style/wrap_12sp"
                    android:text="@string/uk"
                    android:textColor="#99263238"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/wrap_12sp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/_150_reviews"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/wrap_12sp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/_4_5"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/yellow_star"
                    android:src="@drawable/star" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                style="@style/wrap_12sp"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_red_edges"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/_3_hr"
                android:textColor="@color/white" />

            <TextView
                style="@style/wrap_12sp"

                android:layout_gravity="end"
                android:layout_marginBottom="9dp"
                android:text="@string/russian"
                android:textColor="#DE122940" />

            <TextView
                style="@style/wrap_12sp"
                android:layout_gravity="end"
                android:text="@string/_5_days_ago"
                android:textColor="#61122940" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>